<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgotpassword_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_forgotpassword_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/tv_forgotpassword_title_text"
            android:textSize="@dimen/tv_20sp_textsize" />
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/tv_forgotpassword_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/tv_forgotpassword_description_text"
        android:textSize="@dimen/tv_forgotpassword_description_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_forgotpassword_toolbar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_forgotpassowrd_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgotpassword_description">

        <EditText
            android:id="@+id/et_forgotpassowrd_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/et_login_email_hint"
            android:textSize="@dimen/et_16sp_textsize"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_forgotpassword_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="@dimen/btn_8dp_padding"
        android:paddingBottom="@dimen/btn_8dp_padding"
        android:text="@string/btn_forgotpassowrd_submit_text"
        android:textSize="@dimen/btn_18sp_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_forgotpassowrd_email" />

</androidx.constraintlayout.widget.ConstraintLayout>